Add prototype AlignCommand